chore: yarn add -D husky and lint-staged

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "eslint-plugin-prettier": "^3",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7"
+  },
+  "devDependencies": {
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11"
   }
 }
