--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6",
     "eslint-plugin-import": "^2",
+    "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-prettier": "^3",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7"
