--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
   },
   "homepage": "https://github.com/beaunus/style-config#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^3",
     "@typescript-eslint/parser": "^3.6.1",
     "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6",
-    "eslint-plugin-import": "^2",
-    "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-prettier": "^3",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11"
+  },
+  "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3",
+    "eslint-config-prettier": "^6",
+    "eslint-plugin-import": "^2",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-prettier": "^3",
+    "eslint-plugin-react": "^7.20.5"
   }
 }
