--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/naming-convention": [
       "error",
       { "format": ["camelCase"], "selector": "default" },
+      { "format": ["camelCase", "Pascal"], "selector": "function" },
       {
         "format": ["camelCase", "PascalCase", "UPPER_CASE"],
         "selector": "variable"
