turn off react/prop-types

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,6 +73,7 @@
     "prefer-const": "error",
     "prefer-template": "error",
     "react/jsx-sort-props": "error",
+    "react/prop-types": "off",
     "require-atomic-updates": "error",
     "require-await": "error",
     "sort-keys": "warn",
