--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
   },
   "homepage": "https://github.com/beaunus/style-config#readme",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.6.1",
     "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
     "prettier": "^2.0.5",
     "typescript": "^3.9.7"
   },
