--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.15",
   "description": "style config",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky install"
+  },
   "repository": {
     "type": "git",
     "url": "github.com/beaunus/style-config"
@@ -15,27 +17,27 @@
   },
   "homepage": "https://github.com/beaunus/style-config#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
-    "prettier": "^2.0.5",
-    "typescript": "^3.9.7"
+    "@typescript-eslint/eslint-plugin": "^4",
+    "@typescript-eslint/parser": "^4.18.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8",
+    "eslint-plugin-import": "^2",
+    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-prettier": "^3",
+    "eslint-plugin-react": "^7.22.0",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11"
+    "husky": "^5.1.3",
+    "lint-staged": "^10.5.4"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3",
-    "eslint-config-prettier": "^6",
+    "@typescript-eslint/eslint-plugin": "^4",
+    "eslint-config-prettier": "^8",
     "eslint-plugin-import": "^2",
-    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3",
-    "eslint-plugin-react": "^7.20.5"
+    "eslint-plugin-react": "^7.22.0"
   }
 }
