fix: add import/resolver settings

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -81,6 +81,12 @@
     "yoda": "error"
   },
   "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+        "moduleDirectory": ["node_modules", "src/"]
+      }
+    },
     "jsdoc": { "mode": "typescript" },
     "react": { "version": "detect" }
   }
