--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -82,6 +82,7 @@
     "yoda": "error"
   },
   "settings": {
+    "import/parsers": { "@typescript-eslint/parser": [".ts", ".tsx"] },
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"],
