--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/parser": "^4.18.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2",
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3",
