--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -87,7 +87,8 @@
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"],
         "moduleDirectory": ["node_modules", "src/"]
-      }
+      },
+      "typescript": { "alwaysTryTypes": true, "project": "**/tsconfig.json" }
     },
     "jsdoc": { "mode": "typescript" },
     "react": { "version": "detect" }
