--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-sort-exports": "^0.6.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
@@ -39,6 +40,7 @@
     "eslint-plugin-import": "^2",
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-sort-exports": "^0.6.0"
   }
 }
