--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-sort-exports": "^0.6.0",
+    "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
